# CoolSpot

./: .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  playwright.config.mjs  pyproject.toml
.github/workflows/: pages.yml
config/: pipeline.yaml
data/sources/: md_county_registry.json
docs/design/: AD-001-architecture.md
docs/superpowers/plans/: 2026-07-05-coolspot.md  2026-07-06-analysis-layout.md  2026-07-06-analysis-magnitude.md  2026-07-06-baltimore-designated.md  2026-07-06-place-search.md
docs/superpowers/specs/: 2026-07-05-coolspot-design.md  2026-07-06-analysis-layout-design.md  (+4 more)
pipeline/: cli.py  config.py  geocode.py  publish.py  publish_tracts.py  schema.py
pipeline/acquire/: boundaries.py  census.py  gazetteer.py  hospitals.py
site/: analysis.html  index.html
site/css/: style.css
site/data/: cooling_centers.geojson  hospitals.geojson  manifest.json  places.json  site_config.json  tracts_dc.geojson  tracts_md.geojson  tracts_va.geojson
site/js/: analysis.js  common.js  finder.js
tests/: test_acs.py  test_boundaries.py  test_census.py  test_cli.py  test_config.py  test_cooling_baltimore.py  test_cooling_dc.py  test_cooling_md.py  test_cooling_md_counties.py  test_cooling_runner.py  test_cooling_va.py  test_gazetteer.py  test_geocode.py  test_hospitals.py  test_publish.py  test_publish_tracts.py  test_schema.py
tests-e2e/: smoke.spec.mjs
tests/fixtures/: md_anne_arundel.html  md_baltimore_county.html  md_baltimore_libraries.html  md_baltimore_seniors.html  md_howard.html  md_hub_2026.html
(+6 files in other folders)
