[project]
name = "coolspot"
version = "0.1.0"
description = "Heat relief finder: cooling centers, hospitals, and heat vulnerability for MD/VA/DC"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32",
    "pyyaml>=6.0",
    "beautifulsoup4>=4.12",
    "pyshp>=2.3",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[project.scripts]
coolspot = "pipeline.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
